--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -51,7 +51,7 @@
 
 .subtitle {
   text-align: center;
-  font-family: EdwardianScriptITC;
+  font-family: EdwardianScriptITC, serif;
   font-size: typo.$xxl*1.2;
 }
 
