--- a/src/stylesheets/_layout.scss
+++ b/src/stylesheets/_layout.scss
@@ -1,10 +1,13 @@
 html {
-  height: 100%;
+ height: auto;
 }
 
 body {
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #app {
