--- a/src/stylesheets/variables/_colors.scss
+++ b/src/stylesheets/variables/_colors.scss
@@ -15,9 +15,9 @@ $palette: (
         ),
         'helper':(
                 'green': #0b7d0f,
-                'blue': #0b7d0f,
-                'red': #0b7d0f,
-                'orange': #0b7d0f,
+                'blue': #344289,
+                'red': #b62121,
+                'orange': #a34807,
         )
 );
 
