--- a/src/components/ui/dropdown/index.module.scss
+++ b/src/components/ui/dropdown/index.module.scss
@@ -30,6 +30,7 @@
 
   &:hover {
     color: map-get(colors.$colorButton, 'hover', 'text');
+    color:red;
     background-color: map-get(colors.$colorButton, 'hover', 'fill');
     border-color: map-get(colors.$colorButton, 'hover', 'stroke');
   }
