--- a/src/stylesheets/variables/_colors.scss
+++ b/src/stylesheets/variables/_colors.scss
@@ -16,6 +16,7 @@ $palette: (
         'helper':(
                 'green': #0b7d0f,
                 'blue': #344289,
+                'blueLight': #006FCA,
                 'red': #b62121,
                 'orange': #a34807,
         )
