--- a/src/components/ui/dropdown/index.module.scss
+++ b/src/components/ui/dropdown/index.module.scss
@@ -29,10 +29,9 @@
 
 
   &:hover {
-    color: map-get(colors.$colorButton, 'hover', 'text');
-    color:red;
-    background-color: map-get(colors.$colorButton, 'hover', 'fill');
-    border-color: map-get(colors.$colorButton, 'hover', 'stroke');
+    color: map-get(colors.$colorButton, 'hover', 'text') !important;
+    background-color: map-get(colors.$colorButton, 'hover', 'fill') !important;
+    border-color: map-get(colors.$colorButton, 'hover', 'stroke') !important;
   }
 
 
