--- a/src/components/ui/pill/index.module.scss
+++ b/src/components/ui/pill/index.module.scss
@@ -1,5 +1,6 @@
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/colors";
+@use "src/stylesheets/variables/spacings";
 
 
 .pill {
@@ -28,8 +29,8 @@
   }
 
   &:global(.challenged) {
-    color: map-get(colors.$colorButton, 'secondary', 'text');
-    background-color: map-get(colors.$colorButton, 'secondary', 'fill');
+    color: map-get(colors.$palette, 'primary');
+    background-color: map-get(colors.$palette, 'helper', 'orange');
     border-color: map-get(colors.$colorButton, 'secondary', 'stroke');
   }
 
