--- a/src/components/ui/pill/index.module.scss
+++ b/src/components/ui/pill/index.module.scss
@@ -7,7 +7,11 @@
   border-radius: 4px;
   font-size: typo.$xs;
   padding: 0.25rem 0.5rem;
-  vertical-align: super;
+
+  &:global(.small){
+    font-size: typo.$xxxs;
+  }
+
 
 
   &:global(.live) {
