--- a/src/stylesheets/_theme.scss
+++ b/src/stylesheets/_theme.scss
@@ -34,6 +34,10 @@ footer {
 
 }
 
+a {
+  color: map-get(colors.$palette, secondary)
+}
+
 a:hover, a > *:hover {
   color: map-get(colors.$palette, 'helper', 'blueLight');
 }
