--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -51,8 +51,9 @@
 
 .subtitle {
   text-align: center;
-  font-family: EdwardianScriptITC, serif;
-  font-size: typo.$xxl*1.2;
+  font-family: 'Texturina', serif;
+
+  font-size: typo.$l;
 }
 
 
