--- a/src/components/ui/listClaimsItem/index.module.scss
+++ b/src/components/ui/listClaimsItem/index.module.scss
@@ -7,20 +7,25 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  //border: 1px solid red;
+  padding-top: spacings.$s-2;
+  padding-bottom: spacings.$s-2;
+
 }
 
 .trustScore{
+
   font-size: typo.$m;
   color: map-get(colors.$palette, 'grey', 'alpha')
 }
 
 .containerTitle{
-  margin-top: spacings.$s-4;
-  margin-bottom: spacings.$s-4;
+  margin-bottom: spacings.$s-1;
 }
 
 .title{
   font-size: typo.$l;
+  font-weight: 500;
   color: map-get(colors.$palette, 'secondary');
   margin-right: spacings.$s-2;
 
