--- a/src/components/listClaims/index.module.scss
+++ b/src/components/listClaims/index.module.scss
@@ -1,11 +1,31 @@
 @use 'src/stylesheets/variables/spacings';
 
 
-.containerItems{
+.containerItems {
 
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)) ;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   column-gap: spacings.$s-8;
   row-gap: spacings.$s-8;
 
+
+  @media (min-width: 1200px) {
+
+    grid-template-columns: repeat(4, minmax(160px, 1fr));
+    //grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
+
+
+    & > :nth-child(4n+2) {
+      grid-column: span 2;
+    }
+
+    & > :nth-child(4n) {
+      grid-column: span 4;
+      grid-row: span 1;
+    }
+
+    & > :nth-child(4n+1), & > :nth-child(4n+2), & > :nth-child(4n+3) {
+      grid-row: span 2;
+    }
+  }
 }
