--- a/src/stylesheets/variables/_colors.scss
+++ b/src/stylesheets/variables/_colors.scss
@@ -19,6 +19,7 @@ $palette: (
                 'blueLight': #006FCA,
                 'red': #b62121,
                 'orange': #a34807,
+                'pink': ('alpha':#C31D77, 'beta': #FFC7E5)
         )
 );
 
