sort by trust score

--- a/src/components/confirmCreate/index.module.scss
+++ b/src/components/confirmCreate/index.module.scss
@@ -12,7 +12,10 @@
 
 .description {
   padding-bottom: spacings.$s-3;
+  white-space: break-spaces;
+
 }
+
 
 .buttons {
   margin-top: spacings.$s-18;
