--- a/src/components/ui/pill/index.module.scss
+++ b/src/components/ui/pill/index.module.scss
@@ -7,6 +7,7 @@
   border-radius: 4px;
   font-size: typo.$xs;
   padding: 0.25rem 0.5rem;
+  white-space: pre;
 
   &:global(.small) {
     font-size: typo.$xxs;
@@ -25,16 +26,22 @@
     border-color: map-get(colors.$colorButton, 'secondary', 'stroke');
   }
 
+  &:global(.timelockstarted) {
+    color: map-get(colors.$palette, 'primary');
+    background-color: map-get(colors.$palette, 'helper', 'orange');
+    border-color: map-get(colors.$palette, 'helper', 'orange');
+  }
+
   &:global(.withdrawn) {
-    color: map-get(colors.$colorButton, 'secondary', 'text');
-    background-color: map-get(colors.$colorButton, 'secondary', 'fill');
-    border-color: map-get(colors.$colorButton, 'secondary', 'stroke');
+    color: map-get(colors.$palette, 'primary');
+    background-color: map-get(colors.$palette, 'helper', 'blue');
+    border-color: map-get(colors.$palette, 'helper', 'blue');
   }
 
   &:global(.challenged) {
     color: map-get(colors.$palette, 'primary');
     background-color: map-get(colors.$palette, 'helper', 'orange');
-    border-color: map-get(colors.$colorButton, 'secondary', 'stroke');
+    border-color: map-get(colors.$palette, 'helper', 'orange');
   }
 
 
