remove blinking caret on non input elements

--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -17,6 +17,10 @@ html, body {
   @include typo.fluid-type($minVW, $maxVW, $minFS, $maxFS);
 }
 
+*:not(input) {
+  user-select: none;
+}
+
 .displayBlock {
   display: block;
 }
