--- a/src/components/ui/button/index.module.scss
+++ b/src/components/ui/button/index.module.scss
@@ -28,7 +28,7 @@
 
 
   &:hover {
-    color: map-get(colors.$colorButton, 'hover', 'text') !important;
+    color: map-get(colors.$colorButton, 'hover', 'text');
     background-color: map-get(colors.$colorButton, 'hover', 'fill');
     border-color: map-get(colors.$colorButton, 'hover', 'stroke');
   }
