refactor: complete the palette

--- a/src/stylesheets/variables/_colorsNew.scss
+++ b/src/stylesheets/variables/_colorsNew.scss
@@ -2,7 +2,12 @@ $paletteNew: (
         'primary': hsl(50, 64%, 87%),
         'secondary': hsl(5, 13%, 12%),
         'brown': hsl(7, 61%, 16%),
-        'grey': hsl(0, 9%, 33%)
+        'grey': hsl(0, 9%, 33%),
+        'green': hsl(69, 44%, 23%),
+        'blue': hsl(230, 56%, 26%),
+        'navy': hsl(216, 68%, 15%),
+        'red': hsl(0, 89%, 26%),
+        'orange': hsl(25, 86%, 29%)
 );
 
 
