--- a/src/components/presentational/timeline/index.module.scss
+++ b/src/components/presentational/timeline/index.module.scss
@@ -1,6 +1,12 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/colors";
+@use "src/stylesheets/variables/colorsNew";
+@use "sass:color";
+
+$brownDarken40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -20%);
+$brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: 20%, $alpha: 20%);
+$brownLighten40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -80%);
 
 .timelineSteps {
   margin-top: spacings.$s-7;
@@ -19,20 +25,47 @@
 :global(.ant-steps-item-icon) {
   width: 40px;
   height: 40px;
-  background: transparent !important;
-  border-color: map-get(colors.$colorButton, "primary", "fill") !important;
+}
 
-  .ant-steps-icon {
-    color: map-get(colors.$colorButton, "primary", "fill") !important;
+.timelineSteps :global {
+  .ant-steps-item-process > .ant-steps-item-container {
+    .ant-steps-item-icon {
+      background: $brownDarken40;
+      border-color: transparent;
+    }
+
+    .ant-steps-item-tail:after {
+      background-color: $brownLighten40;
+    }
+  }
+  .ant-steps-item-wait > .ant-steps-item-container,
+  .ant-steps-item-finish > .ant-steps-item-container {
+    .ant-steps-item-icon {
+      background: transparent;
+      border-color: $brownLighten40;
+    }
+  }
+
+  .ant-steps-item-wait > .ant-steps-item-container {
+    .ant-steps-item-tail:after {
+      background-color: $brownLighten40;
+    }
+  }
+
+  .ant-steps-item-finish > .ant-steps-item-container {
+    .ant-steps-icon {
+      color: $brownDarken40;
+    }
+
+    .ant-steps-item-tail:after {
+      background-color: $brownDarken40;
+    }
   }
 }
 
-:global(.ant-steps-icon) {
-  color: map-get(colors.$colorButton, "primary", "fill") !important;
-}
-
-:global {
-  .ant-steps-item-active .ant-step-item-icon {
-    background: map-get(colors.$colorButton, "primary", "fill") !important;
+.timelineSteps :global {
+  .ant-steps-item:not(.ant-steps-item-active):not(.ant-steps-item-process)
+    > .ant-steps-item-container[role="button"]:hover {
+    color: $brownDarken40;
   }
 }
