--- a/src/components/others/route_claim/arbitrationDetails/index.module.scss
+++ b/src/components/others/route_claim/arbitrationDetails/index.module.scss
@@ -8,11 +8,16 @@ $brownDarken20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness:
 $green: hsl(180, 46%, 15%);
 $pink: hsl(313, 74%, 35%);
 
+
+.arbitrationDetails {
+}
+
 .titleWrapper {
   display: flex;
   justify-content: space-between;
   margin-bottom: spacings.$s-4;
 }
+
 .title {
   font-size: typo.$xl;
 }
@@ -72,6 +77,7 @@ $pink: hsl(313, 74%, 35%);
     gap: spacings.$s-1;
     margin-bottom: spacings.$s-2;
     font-size: typo.$xs;
+
     .colorBox {
       width: spacings.$s-3;
       height: spacings.$s-3;
@@ -89,8 +95,10 @@ $pink: hsl(313, 74%, 35%);
       margin-top: spacings.$s-2;
       margin-bottom: spacings.$s-2;
     }
+
     .ant-progress-outer {
       padding-right: 0;
+
       .ant-progress-inner {
         border: 1px solid $brownDarken20;
         border-radius: 4px;
@@ -100,6 +108,7 @@ $pink: hsl(313, 74%, 35%);
           background: hsl(313, 74%, 35%);
           border: 1px solid hsl(314, 65%, 82%);
         }
+
         .ant-progress-success-bg {
           background: hsl(180, 46%, 15%);
           border: 1px solid hsl(180, 100%, 38%);
@@ -116,6 +125,7 @@ $pink: hsl(313, 74%, 35%);
 
   .ant-radio-group {
     width: 100%;
+
     span {
       font-size: typo.$s;
       font-weight: bold;
@@ -125,6 +135,7 @@ $pink: hsl(313, 74%, 35%);
       border-color: $brownDarken40;
       background-color: transparent;
     }
+
     .ant-radio-inner:after,
     .ant-radio-checked:after {
       background-color: $brownDarken40;
