refactor: change subgraph endpoint with new implementation and update naming from claim to article

--- a/src/components/presentational/listArticlesItem/index.module.scss
+++ b/src/components/presentational/listArticlesItem/index.module.scss
@@ -3,7 +3,7 @@
 @use 'src/stylesheets/variables/spacings';
 
 
-.listClaimsItem {
+.listArticlesItem {
   display: flex;
   flex-direction: column;
   flex: 1;
