--- a/src/components/others/listArticles/index.module.scss
+++ b/src/components/others/listArticles/index.module.scss
@@ -1,21 +1,16 @@
-@use 'src/stylesheets/variables/spacings';
-
+@use "src/stylesheets/variables/spacings";
 
 .containerItems {
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(1fr, 100%));
   column-gap: spacings.$s-8;
   row-gap: spacings.$s-8;
 
-
   @media (min-width: 1200px) {
-
     grid-template-columns: repeat(4, minmax(160px, 1fr));
     //grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
 
-
-    & > :nth-child(4n+2) {
+    & > :nth-child(4n + 2) {
       grid-column: span 2;
     }
 
@@ -24,7 +19,9 @@
       grid-row: span 1;
     }
 
-    & > :nth-child(4n+1), & > :nth-child(4n+2), & > :nth-child(4n+3) {
+    & > :nth-child(4n + 1),
+    & > :nth-child(4n + 2),
+    & > :nth-child(4n + 3) {
       grid-row: span 2;
     }
   }
