--- a/src/components/presentational/listArticlesItem/index.module.scss
+++ b/src/components/presentational/listArticlesItem/index.module.scss
@@ -1,7 +1,11 @@
-@use 'src/stylesheets/variables/typo';
-@use 'src/stylesheets/variables/colors';
-@use 'src/stylesheets/variables/spacings';
+@use "src/stylesheets/variables/typo";
+@use "src/stylesheets/variables/colors";
+@use "src/stylesheets/variables/spacings";
+@use "src/stylesheets/variables/colorsNew";
+@use "sass:color";
 
+$brownDarken40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -20%);
+$brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -20%, $alpha: -70%);
 
 .listArticlesItem {
   display: flex;
@@ -9,13 +13,16 @@
   flex: 1;
 
   @media (min-width: 1200px) {
-    border: 1px solid map-get(colors.$palette, secondary);
-    border-radius: 4px;
+    border: 1px solid $brownLighten20;
+    border-radius: 10px;
+    transition: border-color 0.6s ease-in-out;
+
+    &:hover {
+      border: 1px solid $brownDarken40;
+    }
   }
 
-
-  padding: spacings.$s-2;
-
+  padding: spacings.$s-6;
 
   &:hover {
     color: unset;
@@ -24,17 +31,18 @@
 
 .trustScore {
   display: flex;
+  flex-direction: column-reverse;
   justify-content: space-between;
+  gap: spacings.$s-2;
   font-size: typo.$m;
-  color: map-get(colors.$palette, 'grey', 'alpha');
+  color: map-get(colors.$palette, "grey", "alpha");
   margin-bottom: spacings.$s-2;
 }
-
 
 .title {
   font-size: typo.$l;
   font-weight: 500;
-  color: map-get(colors.$palette, 'secondary');
+  color: map-get(colors.$palette, "secondary");
   margin-right: spacings.$s-2;
 
   & > span {
@@ -52,18 +60,16 @@
 //}
 
 .description {
-  margin-bottom: spacings.$s-2;
+  margin: spacings.$s-4 0;
 }
 
 .createdAt {
   margin-top: auto;
   font-size: typo.$s;
-  color: map-get(colors.$palette, 'grey', 'alpha')
+  color: map-get(colors.$palette, "grey", "alpha");
 }
 
 .children {
-  display: contents;
-
   & > span {
     align-self: center;
   }
