--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -1,64 +1,199 @@
-@use 'src/stylesheets/variables/colors';
-@use 'src/stylesheets/variables/typo';
+@use "src/stylesheets/variables/colors";
+@use "src/stylesheets/variables/typo";
+@use "src/stylesheets/variables/spacings";
 
-.nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: typo.$s;
-  height: 3.5rem;
+$breakpoint-tablet: 780px;
+$breakpoint-mobile: 480px;
 
-
-  > a + a {
-    margin-left: 1.25rem;
-  }
-
-
-}
-
-.navEthereum {
-  margin-left: auto;
-
-
-  > button + button {
-    margin-left: 1.25rem;
+@mixin hide-for-tablet {
+  @media only screen and (max-width: $breakpoint-tablet) {
+    display: none;
   }
 }
-
-.logo {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  width: 30rem;
+.stickyNavWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  z-index: 1000;
 }
 
-.hrBelowLogo {
-  width: 21rem;
-  //margin-top: 0.5rem;
-  //margin-bottom: 0.5rem;
+.header {
+  position: relative;
+  .logo {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 30rem;
+  }
 
+  .hrBelowLogo {
+    width: 21rem;
+  }
+
+  .hrBelowSubtitle {
+    margin-top: 1.5rem;
+  }
+
+  .subtitle {
+    text-align: center;
+    font-family: "Texturina", serif;
+
+    font-size: typo.$l;
+  }
+
+  .title {
+    text-align: center;
+    font-size: typo.$xxl * 2;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
+
+  .navEthereum {
+    margin-left: auto;
+
+    > button + button {
+      margin-left: 1.25rem;
+    }
+  }
+
+  &.sticky .navWrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 85%;
+    border-bottom: 1px solid black;
+    padding-bottom: 2px;
+    margin: 0 auto;
+    background: url("/src/assets/paper-texture-surface-texture-small.jpg");
+    z-index: 999;
+  }
+
+  .navWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 3.5rem;
+
+    .nav {
+      @include hide-for-tablet();
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      a {
+        color: #333;
+        text-decoration: none;
+        margin-right: 20px;
+        font-size: 18px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      h2 {
+        display: none;
+      }
+    }
+  }
+
+  .overlay {
+    position: fixed;
+    left: 0;
+    right: 0;
+    height: 100%;
+    max-height: 100vh;
+    background-color: map-get(colors.$palette, primary);
+    background: url("/src/assets/paper-texture-surface-texture-small.jpg");
+    background-repeat: repeat;
+    z-index: 999;
+    transition: opacity 0.4s ease-out;
+    opacity: 0;
+    visibility: hidden;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      top: 260px;
+    }
+
+    @media screen and (max-width: $breakpoint-mobile) {
+      top: 320px;
+    }
+
+    &.visible {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      visibility: hidden;
+    }
+    100% {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  .overlayNav {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    height: 100%;
+    margin-top: spacings.$s-12;
+
+    a {
+      visibility: hidden;
+    }
+
+    &.visible {
+      a {
+        color: #333;
+        text-decoration: none;
+        margin-bottom: 20px;
+
+        animation: fadeIn 0.3s ease-out;
+        animation-fill-mode: forwards;
+
+        &:hover {
+          text-decoration: underline;
+        }
+        @media screen and (max-width: $breakpoint-tablet) {
+          font-size: typo.$l;
+        }
+
+        @media screen and (max-width: $breakpoint-mobile) {
+          font-size: typo.$m;
+        }
+      }
+      a:nth-child(1) {
+        animation-delay: 0s;
+      }
+      a:nth-child(2) {
+        animation-delay: 0.1s;
+      }
+      a:nth-child(3) {
+        animation-delay: 0.2s;
+      }
+      a:nth-child(4) {
+        animation-delay: 0.3s;
+      }
+      a:nth-child(5) {
+        animation-delay: 0.4s;
+      }
+    }
+
+    h2 {
+      font-size: typo.$l;
+      font-weight: bold;
+      margin: 0 0 20px;
+    }
+  }
 }
-
-
-.hrBelowSubtitle {
-  margin-top: 1.5rem;
-
-}
-
-
-.subtitle {
-  text-align: center;
-  font-family: 'Texturina', serif;
-
-  font-size: typo.$l;
-}
-
-.title {
-  text-align: center;
-  font-size: typo.$xxl * 2;
-  font-weight: 500;
-  margin-bottom: 0;
-}
-
-
-
