style: fix horizontal offsets of sticky nav

--- a/src/stylesheets/_layout.scss
+++ b/src/stylesheets/_layout.scss
@@ -27,7 +27,9 @@ header {
   padding-right: 2.5rem;
 
   > nav {
-    padding: 0 1.75rem;
+    @media (min-width: 780px) {
+      padding: 0 1.75rem;
+    }
   }
 }
 
