--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -4,6 +4,8 @@
 
 $breakpoint-tablet: 780px;
 $breakpoint-mobile: 480px;
+$breakpoint-desktop: 1200px;
+$body-margin: 2.5rem;
 
 @mixin hide-for-tablet {
   @media only screen and (max-width: $breakpoint-tablet) {
@@ -63,7 +65,7 @@ $breakpoint-mobile: 480px;
     top: 0;
     left: 0;
     right: 0;
-    width: 85%;
+    width: calc(100vw - (2 * $body-margin));
     border-bottom: 1px solid black;
     padding-bottom: 2px;
     margin: 0 auto;
@@ -89,7 +91,7 @@ $breakpoint-mobile: 480px;
         color: #333;
         text-decoration: none;
         margin-right: 20px;
-        font-size: 18px;
+        font-size: typo.$m;
 
         &:hover {
           text-decoration: underline;
@@ -157,6 +159,7 @@ $breakpoint-mobile: 480px;
         color: #333;
         text-decoration: none;
         margin-bottom: 20px;
+        font-size: typo.$l;
 
         animation: fadeIn 0.3s ease-out;
         animation-fill-mode: forwards;
@@ -164,28 +167,21 @@ $breakpoint-mobile: 480px;
         &:hover {
           text-decoration: underline;
         }
-        @media screen and (max-width: $breakpoint-tablet) {
-          font-size: typo.$l;
-        }
-
-        @media screen and (max-width: $breakpoint-mobile) {
-          font-size: typo.$m;
-        }
       }
       a:nth-child(1) {
-        animation-delay: 0s;
-      }
-      a:nth-child(2) {
-        animation-delay: 0.1s;
-      }
-      a:nth-child(3) {
         animation-delay: 0.2s;
       }
-      a:nth-child(4) {
+      a:nth-child(2) {
         animation-delay: 0.3s;
       }
-      a:nth-child(5) {
+      a:nth-child(3) {
         animation-delay: 0.4s;
+      }
+      a:nth-child(4) {
+        animation-delay: 0.5s;
+      }
+      a:nth-child(5) {
+        animation-delay: 0.6s;
       }
     }
 
