--- a/src/components/presentational/switch/index.module.scss
+++ b/src/components/presentational/switch/index.module.scss
@@ -1,10 +1,9 @@
-@use "src/stylesheets/variables/colorsNew";
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/spacings";
 @use "sass:color";
 
 $borderRadius: spacings.$s-1;
-$brownDarken20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -20%, $alpha: -40%);
+$brownDarken20: hsla(var(--english-breakfast-700), 0.6);
 
 .switch {
   display: flex;
