fix: add global :focus style to .ant-btn class

--- a/src/components/presentational/button/index.module.scss
+++ b/src/components/presentational/button/index.module.scss
@@ -34,7 +34,8 @@
   }
 
 
-  &:active {
+  &:active,
+  &:global(.ant-btn:focus) {
     color: map-get(colors.$colorButton, 'pressed', 'text');
     background-color: map-get(colors.$colorButton, 'pressed', 'fill');
     border-color: map-get(colors.$colorButton, 'pressed', 'stroke');
