--- a/src/components/presentational/button/index.module.scss
+++ b/src/components/presentational/button/index.module.scss
@@ -35,7 +35,7 @@
 
 
   &:active,
-  &:global(.ant-btn:focus) {
+  &:focus {
     color: map-get(colors.$colorButton, 'pressed', 'text');
     background-color: map-get(colors.$colorButton, 'pressed', 'fill');
     border-color: map-get(colors.$colorButton, 'pressed', 'stroke');
