--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -1,4 +1,3 @@
-@use "src/stylesheets/variables/colors";
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/spacings";
 
@@ -69,7 +68,7 @@ $body-margin: 2.5rem;
     border-bottom: 1px solid black;
     padding-bottom: 2px;
     margin: 0 auto;
-    background-color: map-get(colors.$palette, "primary");
+    background-color: var(--starbright-600);
     z-index: 999;
   }
 
@@ -110,7 +109,7 @@ $body-margin: 2.5rem;
     right: 0;
     height: 100%;
     max-height: 100vh;
-    background-color: map-get(colors.$palette, "primary");
+    background-color: var(--starbright-600);
     background-repeat: repeat;
     z-index: 999;
     transition: opacity 0.4s ease-out;
