--- a/src/components/presentational/button/index.module.scss
+++ b/src/components/presentational/button/index.module.scss
@@ -1,6 +1,4 @@
 @use 'src/stylesheets/variables/typo';
-@use 'src/stylesheets/variables/colors';
-
 
 .button {
   height: auto !important;
@@ -10,14 +8,19 @@
   padding: 0.75rem 1.5rem;
   font-size: typo.$s;
   outline: none;
-  color: map-get(colors.$colorButton, 'primary', 'text');
-  background-color: map-get(colors.$colorButton, 'primary', 'fill');
-  border-color: map-get(colors.$colorButton, 'primary', 'stroke');
+  color: var(--starbright-600);
+  background-color: var(--english-breakfast-600);
+  border-color:var(--english-breakfast-600);
+  box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-700), 0.25),
+  inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-700), 0.5);
 
   &:global(.secondary) {
-    color: map-get(colors.$colorButton, 'secondary', 'text');
-    background-color: map-get(colors.$colorButton, 'secondary', 'fill');
-    border-color: map-get(colors.$colorButton, 'secondary', 'stroke');
+    color: var(--dark-orchestra-600);
+    background-color: transparent;
+    border-color: var(--english-breakfast-800);
+    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-900), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-900), 0.5);
+
   }
 
   &:global(.small) {
@@ -28,23 +31,29 @@
 
 
   &:hover {
-    color: map-get(colors.$colorButton, 'hover', 'text');
-    background-color: map-get(colors.$colorButton, 'hover', 'fill');
-    border-color: map-get(colors.$colorButton, 'hover', 'stroke');
+    color: var(--starbright-600);
+    background-color: var(--english-breakfast-700);
+    border-color: var(--english-breakfast-700);
+    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-800), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-800), 0.5);
   }
 
 
-  &:active,
-  &:focus {
-    color: map-get(colors.$colorButton, 'pressed', 'text');
-    background-color: map-get(colors.$colorButton, 'pressed', 'fill');
-    border-color: map-get(colors.$colorButton, 'pressed', 'stroke');
+
+  &:active {
+    color: var(--starbright-600);
+    background-color: var(--english-breakfast-900);
+    border-color: var(--english-breakfast-900);
+    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-1000), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-1000), 0.5);
   }
 
   &[disabled], &[disabled]:hover {
-    color: map-get(colors.$colorButton, 'disabled', 'text');
-    background-color: map-get(colors.$colorButton, 'disabled', 'fill');
-    border-color: map-get(colors.$colorButton, 'disabled', 'stroke');
+    color: var(--smooth-coffee-400);
+    background-color: var(--english-breakfast-200);
+    border-color: var(--english-breakfast-200);
+    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--smooth-coffe-300), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--smooth-coffe-300), 0.5);
   }
 
 }
