--- a/src/components/presentational/listArticlesItem/index.module.scss
+++ b/src/components/presentational/listArticlesItem/index.module.scss
@@ -1,11 +1,8 @@
 @use "src/stylesheets/variables/typo";
-@use "src/stylesheets/variables/colors";
 @use "src/stylesheets/variables/spacings";
-@use "src/stylesheets/variables/colorsNew";
-@use "sass:color";
 
-$brownDarken40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -20%);
-$brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -20%, $alpha: -70%);
+$brownDarken40: hsla(var(--english-breakfast-800), 0.8);
+$brownLighten20: hsla(var(--english-breakfast-700), 0.3);
 
 .listArticlesItem {
   display: flex;
@@ -34,14 +31,14 @@ $brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness
   justify-content: space-between;
   gap: spacings.$s-2;
   font-size: typo.$m;
-  color: map-get(colors.$palette, "grey", "alpha");
+  color: var(--smooth-coffee-600);
   margin-bottom: spacings.$s-2;
 }
 
 .title {
   font-size: typo.$l;
   font-weight: 500;
-  color: map-get(colors.$palette, "secondary");
+  color: var(--dark-orchestra-600);
   margin-right: spacings.$s-2;
 
   & > span {
@@ -49,14 +46,6 @@ $brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness
   }
 }
 
-//.description {
-//  text-overflow: ellipsis;
-//  overflow: hidden;
-//  white-space: nowrap;
-//  //display: -webkit-box;
-//  //-webkit-line-clamp: 3;
-//  //-webkit-box-orient: vertical;
-//}
 
 .description {
   margin: spacings.$s-4 0;
@@ -65,7 +54,7 @@ $brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness
 .createdAt {
   margin-top: auto;
   font-size: typo.$s;
-  color: map-get(colors.$palette, "grey", "alpha");
+  color: var(--smooth-coffee-600);
 }
 
 .children {
