--- a/src/components/presentational/pill/index.module.scss
+++ b/src/components/presentational/pill/index.module.scss
@@ -1,5 +1,4 @@
 @use "src/stylesheets/variables/typo";
-@use "src/stylesheets/variables/colors";
 @use "src/stylesheets/variables/spacings";
 
 .pill {
@@ -13,32 +12,32 @@
   }
 
   &:global(.live) {
-    color: map-get(colors.$palette, "primary");
-    background-color: map-get(colors.$palette, "helper", "green", "alpha");
-    border-color: map-get(colors.$palette, "green");
+    color: var(--starbright-600);
+    background-color: var(--army-green-600);
+    border-color: var(--army-green-600);
   }
 
   &:global(.debunked) {
-    color: map-get(colors.$colorButton, "secondary", "text");
-    background-color: map-get(colors.$colorButton, "secondary", "fill");
-    border-color: map-get(colors.$colorButton, "secondary", "stroke");
+    color: var(--starbright-600);
+    background-color: var(--red-reign-600);
+    border-color: var(--red-reign-600);
   }
 
   &:global(.timelockstarted) {
-    color: map-get(colors.$palette, "primary");
-    background-color: map-get(colors.$palette, "helper", "orange");
-    border-color: map-get(colors.$palette, "helper", "orange");
+    color: var(--starbright-600);
+    background-color: var(--gryphonne-sepia-wash-600);
+    border-color: var(--gryphonne-sepia-wash-600);
   }
 
   &:global(.withdrawn) {
-    color: map-get(colors.$palette, "primary");
-    background-color: map-get(colors.$palette, "helper", "blue");
-    border-color: map-get(colors.$palette, "helper", "blue");
+    color: var(--starbright-600);
+    background-color: var(--schiava-blue-600);
+    border-color: var(--schiava-blue-600);
   }
 
   &:global(.challenged) {
-    color: map-get(colors.$palette, "primary");
-    background-color: map-get(colors.$palette, "helper", "orange");
-    border-color: map-get(colors.$palette, "helper", "orange");
+    color: var(--starbright-600);
+    background-color: var(--gryphonne-sepia-wash-600);
+    border-color: var(--gryphonne-sepia-wash-600);
   }
 }
