--- a/src/components/presentational/timeline/index.module.scss
+++ b/src/components/presentational/timeline/index.module.scss
@@ -1,12 +1,9 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
-@use "src/stylesheets/variables/colors";
-@use "src/stylesheets/variables/colorsNew";
-@use "sass:color";
 
-$brownDarken40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -20%);
-$brownLighten20: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: 20%, $alpha: 20%);
-$brownLighten40: color.scale(map-get(colorsNew.$paletteNew, "brown"), $lightness: -40%, $alpha: -80%);
+$brownDarken40: hsla(var(--english-breakfast-800),  0.8);
+$brownLighten20: hsla(var(--english-breakfast-500), 0.2);
+$brownLighten40: hsla(var(--english-breakfast-800),  0.2);
 
 .timelineSteps {
   margin-top: spacings.$s-7;
