--- a/src/components/presentational/listArticlesItem/index.module.scss
+++ b/src/components/presentational/listArticlesItem/index.module.scss
@@ -2,7 +2,6 @@
 @use "src/stylesheets/variables/spacings";
 
 $brownDarken40: hsla(var(--english-breakfast-800), 0.8);
-$brownLighten20: hsla(var(--english-breakfast-700), 0.3);
 
 .listArticlesItem {
   display: flex;
@@ -10,13 +9,13 @@ $brownLighten20: hsla(var(--english-breakfast-700), 0.3);
   flex: 1;
 
   @media (min-width: 1200px) {
-    border: 1px solid $brownLighten20;
-    border-radius: 10px;
+    border: 1px solid var(--english-breakfast-600);
+    border-radius: 1rem;
     transition: border-color 0.6s ease-in-out;
     padding: spacings.$s-6;
 
     &:hover {
-      border: 1px solid $brownDarken40;
+      border: 1px solid var(--english-breakfast-700);
     }
   }
 
