fix: restore nav anchor font-sizes

--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -90,7 +90,7 @@ $body-margin: 2.5rem;
         color: #333;
         text-decoration: none;
         margin-right: 20px;
-        font-size: typo.$m;
+        font-size: typo.$s;
 
         &:hover {
           text-decoration: underline;
